deploy/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: ai-website-prod
  labels:
    app: ai-website-prod
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ai-website-prod
