deploy/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-website-prod-ingress
  namespace: ai-website-prod
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: ai-website-prod-ingress-ai-website-prod-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecAuditEngine On
      SecRuleEngine DetectionOnly
      SecDefaultAction "phase:2,pass,log,tag:github_team=central-digital-product-team,tag:namespace=ai-website-prod"
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($host = 'prod-ai-website.apps.live.cloud-platform.service.justice.gov.uk') {
        return 301 https://ai.justice.gov.uk;
      }
      
      location = /health {
        auth_basic off;
        access_log off;
        default_type text/plain;
        add_header Content-Type text/plain;
        return 200 "OK";
      }
      
      location = /.well-known/security.txt {
        auth_basic off;
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
spec:
  ingressClassName: modsec
  tls:
    - hosts:
        - ai.justice.gov.uk
      secretName: ai-website-cert-secret
    - hosts:
        - prod-ai-website.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: ai.justice.gov.uk
      http: &http_rules
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-service
                port:
                  number: 3000
    - host: prod-ai-website.apps.live.cloud-platform.service.justice.gov.uk
      http: *http_rules
